# 3D-Ray-Tracer

./: CMakeLists.txt  README.md
src/: Camera.cpp  Camera.h  Obstacles.cpp  Obstacles.h  Pixel.cpp  Pixel.h  Screen.cpp  Screen.h  fast_inverse_square_root.h  main.cpp
